# SR-Markup

./: .gitignore  Cargo.toml  LICENSE  README.md  TestInput.srmark  blog_post_template.html  vs_code_workspace.code-workspace
c-backend/: BF_JsonCpp.lib  Error.txt  TestInput.txt  TestOutput.txt  bifrost_json.c  build.bat  main.cpp  sr-blog-gen.h  test.bat
c-backend/bf/: Array.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  MemoryUtils.h  PoolAllocator.hpp  StringRange.h  TempBuffer.hpp  bf_core.h  bf_function_view.hpp  bf_hash.hpp  bf_meta_utils.hpp  bifrost_imgui_glfw.hpp
c-backend/bf/data_structures/: bifrost_array.hpp  bifrost_container_tuple.hpp  bifrost_dense_map_handle.hpp  bifrost_dynamic_string.h  bifrost_intrusive_list.hpp  bifrost_object_hash_cache.hpp  bifrost_string.hpp
c-backend/bf/memory/: bf_crt_allocator.hpp  bf_freelist_allocator.hpp  bf_pool_allocator.hpp
c-backend/bf/utility/: bifrost_json.h  bifrost_json.hpp
c-backend/bifrost/utility/: bifrost_json.h
example-backend/: TestInput.txt  build.bat  test.bat
example-backend/lib/: BF_DataStructuresC_static.lib
example-backend/src/: main.cpp  sr-markup.h
example-backend/src/bf/: CRTAllocator.hpp  DenseMap.hpp  ListView.hpp  NoFreeAllocator.hpp  StlAllocator.hpp  StringRange.hpp  bf_meta_function_traits.hpp  bf_non_copy_move.hpp  bifrost.hpp
example-backend/src/bf/data_structures/: bifrost_any.hpp  bifrost_array_t.h  (+4 more)
sr-blog-gen/: Cargo.toml  TEST.txt  cbindgen.toml  rustfmt.toml  test-blog.blog
sr-blog-gen/src/: build.rs  lib.rs  main.rs  sr.rs
sr-blog-gen/src/sr/: ast.rs  ast_processor.rs  c_api.rs  lexer.rs  mod.rs
sr-markup/: Cargo.toml  cbindgen.toml
sr-markup/src/: main.rs  sr.rs
sr-markup/src/sr/: c_api.rs  lexer.rs
src/: ast.rs  ast_processor.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/sr/: ast.rs  ast_processor.rs  lexer.rs
srmark-lang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
srmark-lang/syntaxes/: srmark.tmLanguage.json
(+6 files in other folders)
