#
# [See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html]
# [https://doc.rust-lang.org/cargo/reference/cargo-targets.html#library]
#

[package]
name    = "sr-markup"
version = "1.0.0"
authors = ["Shareef Raheem <r.shareef28@gmail.com>"]
edition = "2021"

[dependencies]
minijinja = "1.0.9"
structopt = { version = "0.3" }

[[bin]]
name  = "sr-markup-ast-dump"
test  = false
bench = false
path  = "src/bin/ast_dumper.rs"

[[bin]]
name  = "blufedora-blog-gen"
path  = "src/bin/static_site_gen.rs"

[lib]
name       = "srmarkup"
test       = false
doctest    = true
bench      = false
doc        = true
crate-type = ["lib"]
